feat: add statistics to Profile
